// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorV2 Color Enclosed 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\color{red}ab" display="block">
  <mstyle mathcolor="red" data-latex="\\color{red}a">
    <mi data-latex="a">a</mi>
  </mstyle>
  <mi data-latex="b">b</mi>
</math>"
`;

exports[`ColorV2 Color Frac 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\frac{{\\cal \\color{red}{X}}}{\\color{blue}{\\sf y}}" display="block">
  <mfrac data-latex="\\frac{{\\cal \\color{red}{X}}}{\\color{blue}{\\sf y}}">
    <mrow data-mjx-texclass="ORD" data-latex="{\\cal \\color{red}{X}}">
      <mstyle mathcolor="red" data-latex="\\color{red}{X}">
        <mi data-mjx-variant="-tex-calligraphic" mathvariant="script" data-latex="X">X</mi>
      </mstyle>
    </mrow>
    <mstyle mathcolor="blue" data-latex="\\color{blue}{\\sf y}">
      <mi mathvariant="sans-serif" data-latex="\\sf y">y</mi>
    </mstyle>
  </mfrac>
</math>"
`;

exports[`ColorV2 Color Nested 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\color{red}{a\\color{blue}{b}c}" display="block">
  <mstyle mathcolor="red" data-latex="\\color{red}{a\\color{blue}{b}c}">
    <mi data-latex="a">a</mi>
    <mstyle mathcolor="blue" data-latex="\\color{blue}{b}">
      <mi data-latex="b">b</mi>
    </mstyle>
    <mi data-latex="c">c</mi>
  </mstyle>
</math>"
`;

exports[`ColorV2 Color Open 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\color{red}{ab}" display="block">
  <mstyle mathcolor="red" data-latex="\\color{red}{ab}">
    <mi data-latex="a">a</mi>
    <mi data-latex="b">b</mi>
  </mstyle>
</math>"
`;
